# b2_plotter

./: .gitignore  README.md  pyproject.toml  setup.cfg
b2_plotter/: Plotter.py
src/: main.py
src/b2_plotter.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_class.py  test_functs.py  test_noninteractive.py
