[metadata]
name = b2_plotter
version = 1.0.0
author = Paul Gebeline
author_email = paulgebeline1@gmail.com
description = A simple Python package for use by Belle II analysts to make various plots out of pandas dataframes and numpy arrays.
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://gitlab.com/codasteroid/basicpkg
project_urls =
    Bug Tracker = https://gitlab.com/codasteroid/basicpkg/-/issues
    repository = https://gitlab.com/codasteroid/basicpkg
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src